--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+body{
+   margin: 0px;
+   padding: 0px;
+   overflow-x:hidden ;
+   color: white;
+}
+.form-container{
+   width: 100%;
+   display: flex;
+   justify-content: center;
+ 
+}
+.a{
+   display: flex;
+   justify-content: center;
+   
+
+}
+ul{
+   list-style: none;
+}
+.div-ele{
+   display: flex;
+   flex-direction: column;
+   flex-grow: 1;
+   width: 100%;
+   background: rgb(18, 18, 71);
+   text-align: center;
+   padding: 10px;
+}
+h1{
+   background-color: black;
+   color: white;
+   padding: 10px;
+   border-radius: 10px;
+   margin-right: 20px;
+}
+hr{
+   border:2px solid black;
+   width: 100%;
+}
+.div-ele img{
+   width: 200px;
+   height: 200px;
+   border-radius: 50%;
+   left: 30%;
+   position: relative;
+}
+.flex-cont{
+   display: flex;
+   flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input{
+   width: 280px;
+   margin: 30px 0px;
+   font-size: 20px;
+   padding: 6px;
+   border-radius: 10px;
+   outline: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button{
+   font-size: 20px;
+   padding: 8px;
+   margin:  0px 6px;
+   border-radius: 10px;
+   background-color: orange;
+   border: none;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input   {
+background-color: rgb(24, 2, 24);
+padding: 0px 6px;
+box-sizing: border-box;
+width: 100%;
 }
